[package]
name = "readstor"
version = "0.3.0"
description = "A CLI for Apple Books annotations"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tnahs/readstor"
repository = "https://github.com/tnahs/readstor"
documentation = "https://tnahs.github.io/readstor/"
keywords = ["apple", "books", "ibooks", "highlights", "macos"]
categories = ["command-line-utilities"]
edition = "2021"
include = [
  "src/**/*.rs",
  "templates/basic/basic.jinja2", # Default template
  "README.md",
  "extra/logo/logo-256.png",
  "LICENSE-APACHE",
  "LICENSE-MIT",
]

[lib]
name = "lib"
path = "src/lib/lib.rs"

[dependencies]
color-eyre = "0.6.2"
deunicode = "1.3.2"
env_logger = "0.9.1"
glob = "0.3.0"
home = "0.5.3"
log = "0.4.17"
once_cell = "1.15.0"
pathdiff = "0.2.1"
plist = "1.3.1"
regex = "1.6.0"
rusqlite = "0.28.0"
serde_yaml = "0.9.13"
sysinfo = "0.26.4"
thiserror = "1.0.37"
walkdir = "2.3.2"

[dependencies.chrono]
version = "0.4.22"
features = ["serde"]

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.serde]
version = "1.0.145"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.85"

[dependencies.tera]
version = "1.17.1"
features = ["builtins"]

[dev-dependencies]
assert_cmd = "2.0.4"
