[package]
name = "readstor"
version = "0.5.1"
authors = ["Shant Ergenian <shaaant@pm.me>"]
description = "A CLI for Apple Books annotations"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tnahs/readstor"
repository = "https://github.com/tnahs/readstor"
documentation = "https://tnahs.github.io/readstor/"
keywords = ["apple", "books", "ibooks", "highlights", "macos"]
categories = ["command-line-utilities"]
edition = "2021"
include = [
  "src/**/*.rs",
  "templates/basic/basic.jinja2", # Default template
  "README.md",
  "extra/logo/logo-256.png",
  "LICENSE-APACHE",
  "LICENSE-MIT",
]

[lib]
name = "lib"
path = "src/lib/lib.rs"

[dependencies]
color-eyre = "0.6"
deunicode = "1"
env_logger = "0.11"
glob = "0.3"
log = "0.4"
once_cell = "1"
pathdiff = "0.2"
plist = "1"
regex = "1"
rusqlite = "0.32"
serde_yaml_ng = "0.10"
sysinfo = "0.33"
textwrap = "0.16"
thiserror = "2"
walkdir = "2"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.tera]
version = "1"
features = ["builtins"]

[dependencies.uuid]
version = "1"
features = ["v4", "fast-rng"]

[dev-dependencies]
assert_cmd = "2"

[lints.rust]
future_incompatible = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2018_idioms = "warn"
rust_2018_compatibility = "warn"
rust_2021_compatibility = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"

[lints.rustdoc]
private_intra_doc_links = "allow"
