[tool.poetry]
name = "readstor"
version = "0.1.0"
description = ""
authors = ["tnahs <31777797+tnahs@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.0"
psutil = "^5.7.0"
jinja2 = "^2.11.1"
pyside2 = "^5.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
briefcase = "^0.3.3"

[tool.isort]
profile = "black"
lines_after_imports = 2
skip_gitignore = true


[tool.briefcase]
project_name = "ReadStor"
bundle = "com.tnahs.readstor"
version = "0.1.0"
url = "https://github.com/tnahs/readstor"
license = "MIT license"
author = "Shant Ergenian"
author_email = "shant.ergenian@gmail.com"

[tool.briefcase.app.readstor]
formal_name = "ReadStor"
description = ""
icon = "src/readstor/resources/icon"
sources = ["src/readstor"]
requires = ["pyside2>=5.15.0","jinja2>=2.11.1", "psutil>=5.7.0"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
